--- a/index.html
+++ b/index.html
@@ -3,8 +3,23 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="Cache-Control" content="no-siteapp"/>
+  <meta name="renderer" content="webkit"> <!-- 启用360浏览器的极速模式(webkit) -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- 避免IE使用兼容模式 -->
+  <meta name="screen-orientation" content="portrait">
+  <meta name="x5-orientation" content="portrait">
+  <meta name="full-screen" content="yes">
+  <meta name="x5-fullscreen" content="true">
+  <meta name="x5-page-mode" content="app">
+  <meta name="browsermode" content="application">
+  <meta name="msapplication-tap-highlight" content="no">
+  <meta name="copyright" content="lxjay">
+  <meta name="keywords" content="html5,css3,vue,axios,vuex"> <!-- 关键词 -->
+  <meta name="description" content="lxjay,mobileShop-vue"> <!-- 网站内容描述 -->
+  <meta name="author" content="lxjay,237768986@qq.com"> <!-- 作者 -->
   <title>mobileshop</title>
+  <link rel="stylesheet" href="http://at.alicdn.com/t/font_656082_d2kvew840kg4aemi.css">
   <!--iphone 5 1rem=16px  html font-size=16px-->
 </head>
 
