--- a/index.html
+++ b/index.html
@@ -4,22 +4,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="Cache-Control" content="no-siteapp"/>
-  <meta name="renderer" content="webkit"> <!-- 启用360浏览器的极速模式(webkit) -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- 避免IE使用兼容模式 -->
-  <meta name="screen-orientation" content="portrait">
-  <meta name="x5-orientation" content="portrait">
-  <meta name="full-screen" content="yes">
-  <meta name="x5-fullscreen" content="true">
-  <meta name="x5-page-mode" content="app">
-  <meta name="browsermode" content="application">
-  <meta name="msapplication-tap-highlight" content="no">
-  <meta name="copyright" content="lxjay">
-  <meta name="keywords" content="html5,css3,vue,axios,vuex"> <!-- 关键词 -->
-  <meta name="description" content="lxjay,mobileShop-vue"> <!-- 网站内容描述 -->
-  <meta name="author" content="lxjay,237768986@qq.com"> <!-- 作者 -->
+  <meta http-equiv="Cache-Control" content="no-siteapp" />
+  <!-- 页面关键词 -->
+  <meta name="keywords" content="html css axios vue" />
+  <!-- 启用360浏览器的极速模式(webkit) -->
+  <meta name="renderer" content="webkit">
+  <!-- 优先使用 IE 最新版本和 Chrome -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>mobileshop</title>
   <link rel="stylesheet" href="http://at.alicdn.com/t/font_656082_d2kvew840kg4aemi.css">
+  <!--[if lt IE 9]>
+    <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+  <![endif]-->
   <!--iphone 5 1rem=16px  html font-size=16px-->
 </head>
 
@@ -34,7 +31,9 @@
   let htmlWidth = document.documentElement.clientWidth || document.body.clientWidth;
   //得到html的Dom元素
   let htmlDom = document.getElementsByTagName('html')[0];
-  if (htmlWidth > 750) {htmlWidth = 750}
+  if (htmlWidth > 750) {
+    htmlWidth = 750
+  }
   //设置根元素字体大小
   htmlDom.style.fontSize = htmlWidth / 20 + 'px';
 
