--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-    <title>mobileShop</title>
+    <title>移动商城</title>
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_656082_d2kvew840kg4aemi.css">
     <!--iphone 5 1rem=16px  html font-size=16px-->
 
   </head>
