--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
   <title>移动商城</title>
   <link rel="stylesheet" href="http://at.alicdn.com/t/font_656082_d2kvew840kg4aemi.css">
-  <!--iphone 5 1rem=16px  html font-size=16px-->
+  <!--[if lt IE 9]>
+    <script src="lib/html5shiv/html5shiv.min.js"></script>
+    <script src="lib/respond/respond.min.js"></script>
+  <![endif]-->
 
 </head>
 
