--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-  <title>移动商城</title>
+  <title>peopleMall</title>
   <!--[if lt IE 9]>
     <script src="lib/html5shiv/html5shiv.min.js"></script>
     <script src="lib/respond/respond.min.js"></script>
@@ -22,8 +22,7 @@
     if (htmlwidth > 750) {
       htmlwidth = 750
     }
-    htmlDom.style.fontSize = htmlwidth / 20 + 'px';
-
+    htmlDom.style.fontSize = htmlwidth / 20 + 'px';else
   </script>
 </body>
 
